--- a/Explore/Default/.Default.Project.json
+++ b/Explore/Default/.Default.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "9bksR8Mv60IdREQgx5P3sG",
+    "id" : "8PPxxtIQ752eM2r79knUWy",
     "name" : "Default",
     "type" : "Project",
     "metadata" : {
